# SendMail-Bot

./: .gitignore  README.md  api.gs  main.py  pyproject.toml
bot/: __init__.py  google_sheet.py  mail_dealer.py  share_point.py
common/: __init__.py  exception.py
