[project]
name = "sendmail-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.38.0",
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pygetwindow>=0.0.9",
    "pygsheets>=2.0.6",
    "pywinauto>=0.6.9",
    "requests>=2.32.3",
    "selenium>=4.29.0",
]
